[package]
name = "rust-base"
version = "1.0.0"
authors = ["Lloyd Tanedo <lloydtan@buffalo.edu>"]
edition = "2021"
repository = "https://github.com/ltanedo/powertrader-manuals"
readme = "README.md"
license = "MIT"
keywords = ["cli", "starter"]
description = """
Rust base for algotrading
"""

[dependencies]
polars = { version = "0.41.0", features = ["lazy", "dtype-categorical", "json", "polars-io", "parquet"] }
atoi = { version = "0.3.0" }
reqwest = { version = "0.12.7", features = ["json", "blocking"] }
tokio = { version = "1.39.3", features = ["full"] }
serde_json = "1.0"
futures = "0.3"
select = "0.6.0"
lambda_runtime = "0.13.0"
